# kobold-test

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-dev.sh  get_latest_crate_version.sh  get_latest_nightly_version.sh  index.html  rust-toolchain.toml  set_cargo_package_version.sh
data/: invoice.csv
scripts/: docker-dev.sh  get_latest_crate_version.sh  get_latest_nightly_version.sh  set_cargo_package_version.sh
src/: invoice.csv  main.rs  state.rs
