[package]
name = "kobold-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
kobold = { version = "0.5.0", git = "https://github.com/maciejhirsz/kobold.git", rev = "53eacf69d2ea3f25a47e58a3ccd11dcaf73d48bf" }
kobold_macros = { version = "0.5.0", git = "https://github.com/maciejhirsz/kobold.git", rev = "53eacf69d2ea3f25a47e58a3ccd11dcaf73d48bf" }
kobold_qr = { version = "0.5.0", git = "https://github.com/maciejhirsz/kobold.git", rev = "53eacf69d2ea3f25a47e58a3ccd11dcaf73d48bf" }
compact_str = "0.7.0"
gloo-console = "0.2.3"
logos = "0.12.1"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
	"console",
	"HtmlInputElement",
	"File",
	"FileList",
]